# cyborg_mind

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BUGFIXES_AND_ENHANCEMENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.gpu  FIXES_SUMMARY.md  INSTALL_MISSING.md  Makefile  OPTIMIZATION_SUMMARY.md  README.md  UPGRADE_COMPLETE.md  UPGRADE_SUMMARY.md  build_verify.py  cleanup_v5.sh  docker-compose.yml  eval.py  eval_production.py  evaluate_minerl_agent.py  launcher.py  mine_rl_train.py  pyproject.toml  pytest.ini  quick_start.sh  quick_verify.py  requirements-core.txt  requirements-dev.txt  requirements-experimental.txt  requirements-minerl.txt  requirements.txt  setup.py  setup_gym.sh  setup_minerl.sh  train.py  train_advanced.py  train_production.py  train_v7.py
.github/workflows/: ci.yml  codeql.yml  google.yml  main.yml  python-app.yml
checkpoints/: .gitkeep  format_v2.json
configs/: memory_ppo_v7.yaml  minerl_memory_ppo.yaml  synthetic.yaml  treechop_ppo.yaml  unified_config.yaml
configs/envs/: gym_cartpole.yaml  gym_pendulum.yaml
cyborg_mind_v2/deployment/: __init__.py  api_server.py  brain_production.py  monitor.py  requirements.txt
cyborg_mind_v2/envs/: __init__.py  base_adapter.py  cc3d_adapter.py  gym_adapter.py  minerl_adapter.py  minerl_obs_adapter.py
cyborg_mind_v2/training/: DEBUG_SUMMARY.md  FIXES_SUMMARY.md  teacher_student_trainer_mind.py  teacher_student_trainer_real.py  train_cyborg_mind_ppo_controller.py  train_distillation_minerl.py  train_real_teacher_bc.py  trainer.py  verify_training_setup.py
cyborg_rl/: __init__.py  config.py  server.py
cyborg_rl/agents/: __init__.py  ppo_agent.py
cyborg_rl/diagnostics/: __init__.py  action_logger.py  live_visualizer.py  memory_dashboard.py
cyborg_rl/envs/: __init__.py  base.py  eeg_adapter.py  gym_adapter.py  lab_adapter.py  minerl_adapter.py  trading_adapter.py  universal_adapter.py
cyborg_rl/experiments/: __init__.py  registry.py
cyborg_rl/memory/: __init__.py  memory_v7.py  pmm.py  recurrent_rollout_buffer.py  replay_buffer.py  rollout_buffer_v7.py
cyborg_rl/memory_benchmarks/: associative_recall_env.py  delayed_cue_env.py  pseudo_mamba_memory_suite.py
cyborg_rl/metrics/: __init__.py  prometheus_metrics.py
cyborg_rl/models/: __init__.py  encoder.py  encoder_v7.py  mamba_gru.py  policy.py  popart.py  pseudo_mamba.py  value.py
cyborg_rl/trainers/: __init__.py  memory_ppo_trainer.py  ppo_trainer.py  recurrent_rollout_buffer.py  rollout_buffer.py  trainer_v7.py
cyborg_rl/utils/: __init__.py  checkpoint.py  config.py  device.py  jwt_auth.py  load_agent.py  logging.py  schedulers.py  seeding.py
deploy/: nginx.conf
docs/: ADAPTER_SYSTEM.md  API.md  ARCHITECTURE.md  ARCHITECTURE_V3.md  ARCHITECTURE_V7.md  BUGFIXES.md  DEPLOYMENT.md  EXPERIMENTS.md  GITHUB_SETUP.md  HOW_IT_WORKS.md  HOW_TO_TRAIN.md  INDEX.md  MEMORY_ARCHITECTURE.md  MEMORY_PPO_BUGFIXES.md  MEMORY_V7.md  MINERL_RESULTS.md  MONITORING.md  QUICK_DEMO.md  QUICK_START.md  QUICK_START_GUIDE.md  RECURRENT_PPO.md  RECURRENT_PPO_V7.md  SECURITY.md  TRAINING_DIAGNOSIS.md  TROUBLESHOOTING.md  V2.6_ARCHITECTURE.md  V2.6_MIGRATION_GUIDE.md  V2.6_RELEASE_NOTES.md
docs/archive/: BUILD_STATUS.md  COMPLETE_SYSTEM_GUIDE.md  FINAL_VERIFICATION.md  GYM_FIXED.md  SETUP_STATUS.md  V2.6_ARCHITECTURE.md  V2.6_MIGRATION_GUIDE.md
examples/: train_cartpole.py  train_minerl.py
experiments/: run_full_pipeline.sh  run_treechop_ppo.sh
frontend/demo/: index.html
legacy/: eval_production.py  quick_verify.py  setup_mamba_gpu.sh  train.py  train_production.py
legacy/adapters/: eeg_adapter.py  trading_adapter.py
legacy/configs/: gym_cartpole.yaml  memory_delayed_cue_recurrent.yaml  treechop_bc.yaml
legacy/cyborg_rl/: server.py
legacy/experiments/: __init__.py  run_treechop_teacher_bc.sh
legacy/monitoring/: grafana_dashboard.json  prometheus.yml
legacy/notebooks/: __init__.py
monitoring/: README.md  prometheus.yml
notebooks/: README.md  train_colab_cuberite.ipynb
scripts/: build_verify.py  check_syntax.py  dashboard.py  demo_client.py  inference.py  quick_verify.py  run_api_server.py  run_memory_sweep.py  run_treechop_pipeline.py  setup_minerl_env.sh  test_upgrade_logic.py  train_gym_cartpole.py  train_minerl_navigate.py  train_minerl_treechop_colab.py  train_treechop.sh  verify_recurrent_ppo.py  verify_setup.py  verify_sim.py  verify_treechop.sh  verify_upgrade.py
tests/: benchmark_scaling.py  test_adapters.py  test_brain.py  test_burn_in_grad_mask.py  test_cyborg_rl_imports.py  test_mamba_state_caching.py  test_memory_expansion.py  test_memory_full_sequence_ppo.py  test_memory_pmm.py  test_pmm_read_write.py  test_recurrent_state_reset.py  test_rollout_buffer_sequence.py  test_trainer_step.py
(+56 files in other folders)
