[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyborg_rl"
version = "3.0.0"
description = "Production-grade Reinforcement Learning with PMM Memory"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "CyborgMind Team"}
]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "gymnasium>=0.29.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "einops>=0.7.0",
    "prometheus_client>=0.17.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "wandb>=0.16.0",
    "opencv-python-headless>=4.8.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "ipython",
    "jupyter"
]
minerl = [
    "minerl>=0.4.4"
]
teacher = [
    "transformers>=4.40.0"
]

[tool.setuptools.packages.find]
include = ["cyborg_rl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=cyborg_rl"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ['py311']
